--- a/week7/assignment/.htaccess
+++ b/week7/assignment/.htaccess
@@ -8,3 +8,5 @@ ExpiresByType image/png "access plus 1 month"
 # Set expiration date to 1 week for all HTML pages
 ExpiresByType text/html "access plus 1 week"
 ExpiresByType application/xhtml+xml "access plus 1 week"
+# Appcache manifest
+AddType text/cache-manifest .appcache
