--- a/week7/assignment/.htaccess
+++ b/week7/assignment/.htaccess
@@ -10,3 +10,7 @@ ExpiresByType text/html "access plus 1 week"
 ExpiresByType application/xhtml+xml "access plus 1 week"
 # Appcache manifest
 AddType text/cache-manifest .appcache
+<IfModule mod_expires.c>
+  ExpiresActive On
+  ExpiresByType text/cache-manifest "access plus 0 seconds"
+</IfModule>
